# hello-world-rust-lambda

./: Cargo.toml  README.md  deploy.sh  event.json  start_local_env.sh
src/: aws_config.rs  main.rs  model.rs  s3.rs
