[package]
name = "hello-rust-lambda"
version = "0.1.0"
edition = "2021"


# Use cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to manage dependencies.
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "0.14.0"
aws-sdk-s3 = "0.14.0"
aws-types = "0.14.0"
aws_lambda_events = { version = "0.6.3", default-features = false, features = ["s3"] }
lambda_runtime = "0.5.1"
serde = "1.0.137"
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["macros"] }
tracing = { version = "0.1.35", features = ["log"] }
tracing-subscriber = { version = "0.3.11", default-features = false, features = ["fmt"] }


